# covid-vis

./: LICENSE  README.md  pyproject.toml
app/: app.py
data/: population.csv
notebooks/: Test notebook.ipynb
