[tool.poetry]
name = "covid-vis"
version = "0.1.0"
description = "A visualization dashboard for COVID-19 data"
authors = ["Bhupinder Saini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
notebook = "^6.0.3"
pandas = "^1.0.3"
dash = "^1.10.0"
dash-bootstrap-components = "^0.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
